# gdx-teavm

./: .gitignore  settings.gradle.kts
.github/workflows/: freetype_natives.yml
backends/backend-glfw/src/main/java/com/github/xpenatan/gdx/teavm/backends/glfw/config/backend/: TeaGLFWNativeProject.java
backends/backend-glfw/src/main/resources/: CMakeLists.txt  fiber.c  uchar.h
backends/backend-glfw/src/main/resources/templates/glfw/: app_release.bat
backends/backend-shared/src/main/java/com/github/xpenatan/gdx/teavm/backends/shared/config/: AssetsCopy.java
buildSrc/src/main/kotlin/: publish.gradle.kts
examples/freetype/core/src/main/java/com/github/xpenatan/gdx/teavm/examples/freetype/: FreetypeDemo.java
examples/freetype/glfw/: build.gradle.kts
examples/freetype/glfw/src/main/java/: BuildFreetypeGlfwDemo.java  FreetypeGlfwLauncher.java
extensions/glfw/gdx-freetype-glfw/: build.gradle.kts
extensions/glfw/gdx-freetype-glfw/src/main/java/com/badlogic/gdx/graphics/g2d/freetype/: FreeType.java  FreeTypeFontGenerator.java
extensions/glfw/gdx-freetype-glfw/src/main/resources/external_cpp/src/freetype/: CMakeLists.txt
extensions/glfw/gdx-freetype-glfw/src/main/resources/external_cpp/src/freetype/src/: gdx2d_freetype_bridge.c
